fix: align mobile header container and burger button

--- a/src/css/sections/header.css
+++ b/src/css/sections/header.css
@@ -97,10 +97,11 @@ img {
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 335px; 
+  /* max-width: 335px;  */
+  max-width: 375px;
   margin: 0 auto;   
-  padding: 0;     
-  /* padding: 0 20px; */
+  /* padding: 0;      */
+  padding: 0 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -240,9 +241,9 @@ img {
   width: 48px;
   height: 48px;
   z-index: 210;
-  position: absolute;
+  /* position: absolute;
   top: 12px;
-  right: 0px;
+  right: 0px; */
 }
 
 .header__burger-line {
@@ -275,9 +276,13 @@ img {
     }
   
     .header__container {
-      max-width: 1200px;
+      /* max-width: 1200px; */
+      max-width: 768px;
       margin: 0 auto;
       padding: 0 32px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
   
     .header__logo {
